added moment.js stuff and made the colour-blocks work

--- a/index.html
+++ b/index.html
@@ -30,59 +30,59 @@
     </header>
 
     <!-- Sets the timeblock id is correspendont to moment.js which accepts numbers from 0-23 so id represents the hour -->
-    <div class="container">
+    <div class="container" id="test">
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="9">9am</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="9-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="9-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="9-btn"></button>
       </div>
 
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="10">10am</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="10-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="10-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="10-btn"></button>
       </div>
 
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="11">11am</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="11-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="11-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="11-btn"></button>
       </div>
 
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="12">12pm</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="12-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="12-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="12-btn"></button>
       </div>
 
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="13">1pm</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="13-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="13-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="13-btn"></button>
       </div>
 
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="14">2pm</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="14-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="14-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="14-btn"></button>
       </div>
 
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="15">3pm</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="15-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="15-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="15-btn"></button>
       </div>
 
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="16">4pm</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="16-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="16-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="16-btn"></button>
       </div>
 
       <div class="row">
         <div class="col-lg-1 col-md-2 col-sm-3 hour" id="17">5pm</div>
-        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea past" placeholder="Daily task..." id="17-textarea"></textarea>
+        <textarea class="col-lg-10 col-md-8 col-sm-6 textarea" placeholder="Daily task..." id="17-textarea"></textarea>
         <button class="col-lg-1 col-md-2 col-sm-3 saveBtn" id="17-btn"></button>
       </div>
     </div>
